@@ -4,8 +4,8 @@ $appDir = "${toolsDir}\app"
 $packageArgs = @{
   packageName  = 'burp-suite-pro-edition'
   fileFullPath = "${appDir}\burpsuite_pro.jar"
-  url          = 'https://portswigger.net/burp/releases/download?product=pro&version=2021.8.2&type=Jar'
-  checksum     = 'f8706df120be5478c6da361b316050e7b8423d9973f0b1a946de57c4085355a6'
+  url          = 'https://portswigger-cdn.net/burp/releases/download?product=pro&version=2022.3.3&type=Jar'
+  checksum     = ''
   checksumType = 'sha256'
 }
 Get-ChocolateyWebFile @packageArgs
@@ -15,7 +15,7 @@ $menuPrograms = [environment]::GetFolderPath([environment+specialfolder]::Progra
 $shortcutArgs = @{
   shortcutFilePath = "${menuPrograms}\Burp Suite Pro Edition.lnk"
   targetPath       = '%JAVA_HOME%\bin\javaw.exe'
-  arguments        = "-jar `"${appDir}\burpsuite_pro.jar`""
-  iconLocation     = "${toolsDir}\icon-pro.ico"
+  arguments        = "--add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -jar `"${appDir}\burpsuite_pro.jar`""
+  iconLocation     = "${toolsDir}\icon.ico"
 }
 Install-ChocolateyShortcut @shortcutArgs
